@@ -1,4 +1,6 @@
 ver 0.18.12 (not yet released)
+* database
+  - proxy: fix build failure with libmpdclient 2.2
 
 ver 0.18.11 (2014/05/12)
 * decoder
